Fix extra padding shown for all section h2

--- a/starwarswiki/src/style/style.scss
+++ b/starwarswiki/src/style/style.scss
@@ -304,7 +304,7 @@ header {
 	}
 }
 
-section h2 {
+.carousel h2 {
 	margin-bottom: calc($margin / 2);
 	text-align: center;
 }
